front: avoid horizontal scroll on editor panel
fix #7320

--- a/front/src/styles/scss/_overrideBootstrapSNCF.scss
+++ b/front/src/styles/scss/_overrideBootstrapSNCF.scss
@@ -108,7 +108,6 @@ label,
 .labels {
   display: flex !important;
   align-items: center !important;
-  white-space: nowrap;
   height: 1.4rem;
   gap: 0.5rem;
 }
